; ModuleID = '/home/carl/AnghaBench/freebsd/sys/x86/acpica/extr_acpi_apm.c_apmreadfiltdetach.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/x86/acpica/extr_acpi_apm.c_apmreadfiltdetach.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.knote = type { %struct.apm_clone_data* }
%struct.apm_clone_data = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@acpi = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.knote*)* @apmreadfiltdetach to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @apmreadfiltdetach(%struct.knote* %0) #0 {
  %2 = alloca %struct.knote*, align 8
  %3 = alloca %struct.apm_clone_data*, align 8
  store %struct.knote* %0, %struct.knote** %2, align 8
  %4 = load i32, i32* @acpi, align 4
  %5 = call i32 @ACPI_LOCK(i32 %4)
  %6 = load %struct.knote*, %struct.knote** %2, align 8
  %7 = getelementptr inbounds %struct.knote, %struct.knote* %6, i32 0, i32 0
  %8 = load %struct.apm_clone_data*, %struct.apm_clone_data** %7, align 8
  store %struct.apm_clone_data* %8, %struct.apm_clone_data** %3, align 8
  %9 = load %struct.apm_clone_data*, %struct.apm_clone_data** %3, align 8
  %10 = getelementptr inbounds %struct.apm_clone_data, %struct.apm_clone_data* %9, i32 0, i32 0
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load %struct.knote*, %struct.knote** %2, align 8
  %13 = call i32 @knlist_remove(i32* %11, %struct.knote* %12, i32 0)
  %14 = load i32, i32* @acpi, align 4
  %15 = call i32 @ACPI_UNLOCK(i32 %14)
  ret void
}

declare dso_local i32 @ACPI_LOCK(i32) #1

declare dso_local i32 @knlist_remove(i32*, %struct.knote*, i32) #1

declare dso_local i32 @ACPI_UNLOCK(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
